# mimi-nox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  clawdash.py  install.sh  pyproject.toml  run_server.py
app/src/: artifact.js  i18n.js  index.html  main.js  manifest.json  mobile.html  service-worker.js  style.css
core/: __init__.py  artifact_detector.py  browser.py  chat.py  commands.py  corrections.py  feedback.py  memory.py  profile.py  react.py  scheduler.py  session.py  skill_builder.py  skills.py  swarm.py  tools.py  transcribe.py  types.py  vision.py  vision_memory.py
server/: main.py
server/routes/: audio.py  chat.py  feedback.py  health.py  memory.py  mobile.py  profile.py  schedule.py  skills.py  vision.py
skills/: code-reviewer.md  file-assistant.md  shell-helper.md  vision-assistant.md  web-researcher.md  writer.md
src-tauri/: tauri.conf.json
tests/: __init__.py  conftest.py  test_api.py  test_artifact_detector.py  test_audio.py  test_chat.py  test_commands.py  test_corrections.py  test_cors_integration.py  test_feedback.py  test_gui_automation.py  test_memory.py  test_mobile.py  test_network.py  test_profile.py  test_react.py  test_session.py  test_skill_builder.py  test_skills.py  test_swarm.py  test_thinking.py  test_tool_calling.py  test_tools.py  test_vision.py  test_vision_learning.py  validate_all_capabilities.py
ui/: __init__.py  app.py  clawdash.tcss  mimi_nox.tcss  widgets.py
utils/: network.py  tunnel.py
