[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawdash"
version = "3.0.0"
description = "BlackForest Edition – keyboard-first TUI for local LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MiMi Tech AI UG", email = "hello@mimiai.de" },
]
keywords = ["tui", "llm", "ollama", "cli", "ai", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.70.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
clawdash = "clawdash:main"

[project.urls]
Homepage = "https://github.com/mimiai/clawdash"
Repository = "https://github.com/mimiai/clawdash"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
