[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimi-nox"
version = "1.0.0"
description = "◑ MiMi Nox – Local AI Assistant. Privat. Lokal. Yours."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MiMi Tech AI UG", email = "hello@mimiai.de" },
]
keywords = ["tui", "llm", "ollama", "ai", "local", "privacy", "assistant", "mimi-nox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "textual>=0.70.0",
    "ollama>=0.3.0",
    "ddgs>=2.0.0",
    "aiofiles>=23.0.0",
    "chromadb>=0.6.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mimi-nox = "clawdash:main"
# keep clawdash alias for backwards compatibility / open-source users
clawdash  = "clawdash:main"

[project.urls]
Homepage   = "https://github.com/mimiai/mimi-nox"
Repository = "https://github.com/mimiai/mimi-nox"
Issues     = "https://github.com/mimiai/mimi-nox/issues"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
